[package]
authors = ["elois <elois@duniter.org>"]
description = "Set of libraries implementing the DUBP protocol."
edition = "2018"
keywords = ["duniter", "dubp"]
license = "AGPL-3.0"
name = "dubp"
readme = "README.md"
repository = "https://git.duniter.org/libs-dupb-rs-libs"
version = "0.43.1"

[lib]
path = "lib.rs"

[dependencies]
dup-crypto = { path = "crypto", default-features = false, version = "0.43.1", features = ["scrypt"] }
dubp-common = { path = "common", version = "0.43.1", features = ["crypto_scrypt"] }
dubp-wallet = { path = "wallet", version = "0.43.1", features = ["crypto_scrypt"] }
dubp-documents = { path = "documents", version = "0.43.1", features = ["crypto_scrypt"] }
dubp-documents-parser = { path = "documents-parser", version = "0.43.1", features = ["crypto_scrypt"] }
dubp-block = { path = "block", version = "0.43.1", features = ["crypto_scrypt"] }

[features]
default = ["crypto_assembly"]

crypto_assembly = ["dup-crypto/assembly", "dubp-common/crypto_assembly", "dubp-wallet/crypto_assembly", "dubp-documents/crypto_assembly", "dubp-documents-parser/crypto_assembly", "dubp-block/crypto_assembly"]
crypto_pure_rust = ["dup-crypto/pure_rust", "dubp-common/crypto_pure_rust", "dubp-wallet/crypto_pure_rust", "dubp-documents/crypto_pure_rust", "dubp-documents-parser/crypto_pure_rust", "dubp-block/crypto_pure_rust"]


[dev-dependencies]
rusty-hook = "0.11.2"

[workspace]
members = [
    "block",
    "common",
    "crypto",
    "documents",
    "documents-parser",
    "wallet"
]

[profile.test]
opt-level = 3

[patch.crates-io]
#json-pest-parser = { path = "../../../rust/json-pest-parser" }
