[package]
authors = ["elois <elois@duniter.org>"]
description = "Set of libraries implementing the DUBP protocol."
edition = "2018"
keywords = ["duniter", "dubp"]
license = "AGPL-3.0"
name = "dubp"
readme = "README.md"
repository = "https://git.duniter.org/libs-dupb-rs-libs"
version = "0.52.0"

[lib]
path = "lib.rs"

[dependencies]
dup-crypto = { path = "crypto", default-features = false, version = "0.52.0" }
dubp-common = { path = "common", version = "0.52.0" }
dubp-wallet = { path = "wallet", version = "0.52.0" }
dubp-documents = { path = "documents", version = "0.52.0" }
dubp-documents-parser = { path = "documents-parser", version = "0.52.0" }
dubp-block = { path = "block", optional = true, version = "0.52.0" }

[features]

# meta-feature for "standard" clients (gcli, gecko, etc)
client = ["dup-crypto/client", "dubp-common/client", "dubp-wallet/client", "dubp-documents/client", "dubp-documents-parser/client"]

# meta-feature for duniter
duniter = ["dup-crypto/duniter", "dubp-common/duniter", "dubp-wallet/duniter", "dubp-documents/duniter", "dubp-documents-parser/duniter", "dubp-block/duniter"]

[dev-dependencies]
rusty-hook = "0.11.2"

[workspace]
members = [
    "block",
    "common",
    "crypto",
    "documents",
    "documents-parser",
    "wallet"
]

[profile.test]
opt-level = 3

[patch.crates-io]
#json-pest-parser = { path = "../../../rust/json-pest-parser" }
