[package]
authors = ["elois <elois@duniter.org>"]
description = "Set of libraries implementing the DUBP protocol."
edition = "2018"
keywords = ["duniter", "dubp"]
license = "AGPL-3.0"
name = "dubp"
readme = "README.md"
repository = "https://git.duniter.org/libs-dupb-rs-libs"
version = "0.57.0"

[lib]
path = "lib.rs"

[dependencies]
dubp-block = { path = "block", optional = true, version = "0.57.0" }
dubp-common = { path = "common", version = "0.57.0" }
dubp-documents = { path = "documents", version = "0.57.0" }
dubp-documents-parser = { path = "documents-parser", version = "0.57.0" }
dubp-wallet = { path = "wallet", version = "0.57.0" }
duniter-bda-types = { path = "bda-types", version = "0.57.0" }
duniter-peer = { path = "peer", version = "0.57.0" }
dup-crypto = { path = "crypto", default-features = false, version = "0.57.0" }

[features]

# meta-feature for "standard" clients (gcli, gecko, etc)
client = ["dup-crypto/client", "dubp-common/client", "duniter-peer/client", "dubp-wallet/client", "dubp-documents/client", "dubp-documents-parser/client", "duniter-bda-types/client"]

# meta-feature for duniter
duniter = ["dup-crypto/duniter", "dubp-common/duniter", "duniter-peer/duniter", "dubp-wallet/duniter", "dubp-documents/duniter", "dubp-documents-parser/duniter", "duniter-bda-types/duniter", "dubp-block/duniter"]

[dev-dependencies]
rusty-hook = "0.11.2"

[workspace]
members = [
    "bda-types",
    "block",
    "common",
    "crypto",
    "documents",
    "documents-parser",
    "peer",
    "wallet"
]

[profile.test]
opt-level = 3

[patch.crates-io]
#json-pest-parser = { path = "../../../rust/json-pest-parser" }
