[package]
name = "dubp-common"
version = "0.38.0"
authors = ["elois <elois@duniter.org>"]
description = "Provide common tools and types for DUBP."
repository = "https://git.duniter.org/libs/dubp-rs-libs"
readme = "README.md"
keywords = ["duniter", "dubp"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
dup-crypto = { path = "../crypto", version = "0.38.0" }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.20"
zerocopy = "0.3.0"

[dev-dependencies]
bincode = "1.2.0"
unwrap = "1.2.1"

[features]
crypto_dewif = ["dup-crypto/dewif"]
crypto_x25519 = ["dup-crypto/x25519"]
crypto_private_message = ["dup-crypto/private_message"]
crypto_pubkey_check = ["dup-crypto/pubkey_check"]
crypto_scrypt = ["dup-crypto/scrypt"]
