[package]
name = "dup-crypto"
version = "0.44.0"
authors = ["elois <c@elo.tf>"]
description = "Manage cryptographic operations for DUniter Protocols and the Duniter eco-system most broadly."
repository = "https://git.duniter.org/libs/dubp-rs-libs"
readme = "README.md"
keywords = ["keys", "cryptography", "duniter", "dunitrust"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
aes = { version = "0.6.0", optional = true }
arrayvec = { version = "0.5.2", features = ["array-sizes-33-128", "array-sizes-129-255"], optional = true }
base64 = "0.13.0"
blake3 = "0.3.7"
bs58 = "0.4.0"
byteorder = "1.4.2"
curve25519-dalek = { version = "3.0.2", optional = true }
cryptoxide = { version = "0.3.2", optional = true }
ed25519-bip32 = { version = "0.3.2", optional = true }
getrandom = { version = "0.2.2" }
once_cell = { version = "1.5.2", optional = true, default-features = false, features = ["std"] }
ring = { version = "0.16.20", optional = true }
serde = { version = "1.0.123", features = ["derive"] }
thiserror = "1.0.24"
zerocopy = "0.3.0"
zeroize = { version = "1.2.0", features = ["zeroize_derive"] }

[dev-dependencies]
bincode = "1.3.1"
hex = "0.4.2"
sodiumoxide = "0.2.6"
unwrap = "1.2.1"

# Benches dependencies
criterion = { version = "0.3.4" }

[[bench]]
harness = false
name = "ring_vs_sodium"
required-features = ["assembly"]

[features]
default = ["assembly"]
#default = ["assembly", "bip32-ed25519"]
#default = ["assembly", "bip32-ed25519", "dewif", "private_message", "pubkey_check", "mnemonic"]

assembly = ["ring"]
bip32-ed25519 = ["cryptoxide", "ed25519-bip32"]
dewif = ["aes", "arrayvec", "scrypt"]
x25519 = ["curve25519-dalek", "pubkey_check"]
mnemonic = ["once_cell"]
private_message = ["arrayvec", "x25519"]
pubkey_check = ["curve25519-dalek"]
pure_rust = ["cryptoxide"]
scrypt = []

# mnemonic languages features (English is the default language, so always included)
mnemonic_all_languages = ["mnemonic_chinese_simplified", "mnemonic_chinese_traditional", "mnemonic_french", "mnemonic_italian", "mnemonic_japanese", "mnemonic_korean", "mnemonic_spanish"]
mnemonic_chinese_simplified = []
mnemonic_chinese_traditional = []
mnemonic_french = []
mnemonic_italian = []
mnemonic_japanese = []
mnemonic_korean = []
mnemonic_spanish = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
