[package]
name = "dubp-currency-params"
version = "0.3.0"
authors = ["elois <elois@duniter.org>"]
description = "Duniter protocol currency parameters"
repository = "https://git.duniter.org/libs/dubp-rs-libs"
keywords = ["duniter", "blockchain", "cryptocurrency"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
dubp-common = { path = "../common", version = "0.3.0", features = ["crypto_scrypt"] }
serde = { version = "1.0.*", features = ["derive"] }
thiserror = "1.0.20"
