[package]
name = "dubp-documents-parser"
version = "0.7.0"
authors = ["elois <elois@duniter.org>"]
description = "Parser for DUBP documents."
repository = "https://git.duniter.org/libs/dubp-rs-libs"
readme = "README.md"
keywords = ["duniter", "dubp", "documents", "parser"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
dubp-documents = { path = "../documents", version = "0.22.0" }
json-pest-parser = "0.3.0"
pest = "2.1.3"
pest_derive = "2.1.0"
serde_json = "1.0.*"
thiserror = "1.0.20"

[dev-dependencies]
unwrap = "1.2.1"

[features]
crypto_scrypt = ["dubp-documents/crypto_scrypt"]
