[package]
name = "dubp-documents"
version = "0.20.0"
authors = ["elois <elois@duniter.org>"]
description = "Handles DUBP documents (DUBP: DUniter Blockhain Protocol)"
repository = "https://git.duniter.org/libs/dubp-rs-libs"
readme = "README.md"
keywords = ["duniter", "blockchain", "cryptocurrency", "document"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
beef = "0.4.4"
dubp-wallet = { path = "../wallet", version = "0.3.0" }
log = "0.4.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
thiserror = "1.0.20"

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "0.6.1"
unwrap = "1.2.1"

[features]
crypto_rand = ["dubp-wallet/crypto_rand"]
crypto_scrypt = ["dubp-wallet/crypto_scrypt"]
