[package]
name = "duniter-peer"
version = "0.55.1"
authors = ["elois <elois@duniter.org>"]
description = "Handle duniter peerd card"
repository = "https://git.duniter.org/libs/dubp-rs-libs"
readme = "README.md"
keywords = ["duniter", "blockchain", "cryptocurrency", "peer"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
beef = "0.5.0"
dubp-common = { path = "../common", default-features = false, version = "0.55.1" }
log = "0.4.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
smallvec = { version = "1.6.1", features = ["serde"] }
thiserror = "1.0.20"

[dev-dependencies] 
maplit = "1.0.2"
pretty_assertions = "0.6.1"
unwrap = "1.2.1"

[features]

# meta-feature for "standard" clients (gcli, gecko, etc)
client = ["dubp-common/client"]

# meta-feature for duniter
duniter = ["dubp-common/duniter"]

crypto_scrypt = ["dubp-common/crypto_scrypt"]
