[package]
name = "dubp-wallet"
version = "0.37.0"
authors = ["elois <elois@duniter.org>"]
description = "Provide wallet definition for DUBP protocol"
repository = "https://git.duniter.org/libs/dubp-rs-libs"
readme = "README.md"
keywords = ["duniter", "blockchain", "cryptocurrency", "wallet"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
byteorder = "1.3.4"
dubp-common = { path = "../common", version = "0.37.0" }
serde = { version = "1.0.*", features = ["derive"] }
smallvec = { version = "1.4.2", features = ["serde"] }
thiserror = "1.0.20"
zerocopy = "0.3.0"

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "0.6.1"
unwrap = "1.2.1"

[features]
crypto_scrypt = ["dubp-common/crypto_scrypt"]
