[package]
name = "dubp-wallet"
version = "0.49.0"
authors = ["elois <elois@duniter.org>"]
description = "Provide wallet definition for DUBP protocol"
repository = "https://git.duniter.org/libs/dubp-rs-libs"
readme = "README.md"
keywords = ["duniter", "blockchain", "cryptocurrency", "wallet"]
license = "AGPL-3.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
byteorder = "1.3.4"
dubp-common = { path = "../common", default-features = false, version = "0.49.0" }
serde = { version = "1.0.*", features = ["derive"] }
smallvec = { version = "1.6.1", features = ["serde"] }
thiserror = "1.0.20"
zerocopy = "0.3.0" 

[dev-dependencies]
maplit = "1.0.2"
pretty_assertions = "0.6.1"
unwrap = "1.2.1"

[features]

# meta-feature for "standard" clients (gcli, gecko, etc)
client = ["dubp-common/client"]

# meta-feature for duniter
duniter = ["dubp-common/duniter"]

crypto_scrypt = ["dubp-common/crypto_scrypt"]
